# cfg_eval.rs

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: CI.yml  future-proof.yml
examples/: main.rs
src/: lib.rs
tests/: item.rs
