# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
proc-macro = true

[package]
name = "cfg_eval"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.2"
edition = "2021"
rust-version = "1.61.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/cfg_eval.rs"
documentation = "https://docs.rs/cfg_eval"
readme = "README.md"

description = "`#[cfg_eval]` in stable Rust 🙃"
keywords = ["cfg_eval"]

[features]
better-docs = [  # allowed to break MSRV
]
ui-tests = ["better-docs"]

default = [
]

docs-rs = [
    "better-docs",
]

# Support for any kind of item, not only derive inputs.
items = []

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "2.0.0"
syn.default-features = false
syn.features = [
    "parsing",
    "printing",
    # no "full",
]

[dev-dependencies]
macro_rules_attribute.version = "0.2.0"
cfg_eval.path = "."
cfg_eval.features = ["items"]

[workspace]

[package.metadata.docs.rs]
features = ["docs-rs"]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
